Fix views admin search alignment

--- a/sass/pages/admin.scss
+++ b/sass/pages/admin.scss
@@ -2,7 +2,7 @@
 @import "../abstractions/_mixins.scss";
 
 #ctools-export-ui-list-form {
-	.form-item-search {
+	.form-item-search label {
 		display: inline;
 		float: none;
 		vertical-align: middle;
